jwt during handshake